Wrap entire button in link. Remove broken image reference. Make more noticable disabled text in form. Set correct header width.

--- a/src/atoms/input/inputBox.component.css
+++ b/src/atoms/input/inputBox.component.css
@@ -41,7 +41,7 @@ input:focus {
 input:disabled {
   background-color: white;
   border: 1px solid #f3f3f3;
-  color: #f3f3f3 !important;
+  color: #aeb0b1 !important;
   outline: none;
 
   -webkit-box-shadow: 0 0 0 1000px white inset !important;
