--- a/src/atoms/input/textArea.component.css
+++ b/src/atoms/input/textArea.component.css
@@ -36,7 +36,7 @@ textarea:focus {
 textarea:disabled {
   background-color: white;
   border: 1px solid #f3f3f3;
-  color: #f3f3f3;
+  color: #aeb0b1;
   outline: none;
 }
 
