--- a/src/pages/resume/resume.component.css
+++ b/src/pages/resume/resume.component.css
@@ -1,6 +1,6 @@
 .resume
 .resume-header {
-  width: 100%;
+  max-width: 100%;
   height: 100px;
   text-align: center;
   color: #442c2e;
